2009-11-20  Dave Hyatt  <hyatt@apple.com>

        Reviewed by Darin Adler.

        Make sure to export WebSerializedJSValue.

        * WebKit.exp:

2009-11-20  Dave Hyatt  <hyatt@apple.com>

        Reviewed by Oliver Hunt and Jon Honeycutt.

        Add support for WebSerializedJSValue to WebKit.  This object wraps the SerializedScriptValue functionality in WebCore
        and exposes the ability to do JS value serialization/deserialization to WebKit clients.

        * WebView/WebSerializedJSValue.h: Added.
        * WebView/WebSerializedJSValue.mm: Added.
        (-[WebSerializedJSValue initWithValue:context:]):
        (-[WebSerializedJSValue deserialize:]):
        (-[WebSerializedJSValue dealloc]):

2009-11-20  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Beth Dakin.

        WAI-ARIA: add support for 'math' role
        https://bugs.webkit.org/show_bug.cgi?id=31706

        * WebCoreSupport/WebViewFactory.mm:
        (-[WebViewFactory AXARIAContentGroupText:]):

2009-11-19  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Dan Bernstein.

        <rdar://problem/7035231>
        Support closed caption in <video> element

        * WebCoreSupport/WebSystemInterface.m:
        (InitWebCoreSystemInterface):
            Add QTMovieHasClosedCaptions and QTMovieSetShowClosedCaptions.

        * WebCoreSupport/WebViewFactory.mm:
        (-[WebViewFactory localizedMediaControlElementString:]):
        (-[WebViewFactory localizedMediaControlElementHelpText:]):
            Add accessibility help strings for media controller closed caption button.

2009-11-18  Michelangelo De Simone  <micdesim@gmail.com>

        Reviewed by Darin Adler.

        Fix for <https://bugs.webkit.org/show_bug.cgi?id=27959>.
        Support for validationMessage attribute, as per HTML5 specs.

        * WebCoreSupport/WebViewFactory.mm:
        (-[WebViewFactory validationMessageValueMissingText]):
        (-[WebViewFactory validationMessageTypeMismatchText]):